tests/lean/forErrors.lean.expected.out
forErrors.lean:3:29-3:30: error: failed to synthesize
  ToStream α ?m
use `set_option diagnostics true` to get diagnostic information
